fixed cloud clipping issue
added overflow: hidden; to top container div in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ margin-left: 10px;
     background-color: #dbf2f1;
     position: relative;
     padding-top: 50px;
+    overflow: hidden;
 }
 .middle-container
 {
